{
  "version": 4,
  "terraform_version": "0.12.15",
  "serial": 154,
  "lineage": "f8dce6f5-87a6-5e6e-7759-2ef8f0fbff1e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:360736453765:vpc/vpc-043b6bf17a321d9cc",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0027465d080565165",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-19104371",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-043b6bf17a321d9cc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a3e020711a9393f9",
            "owner_id": "360736453765",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "VPC-kong-dev",
              "Service": "kong"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "external",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "admin",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "external",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "manager",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "portal",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "portal-gui",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgresql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:360736453765:security-group/sg-045cad5370cfa2e5a",
            "description": "Kong RDS instance",
            "egress": [],
            "id": "sg-045cad5370cfa2e5a",
            "ingress": [],
            "name": "kong-dev-postgresql",
            "name_prefix": null,
            "owner_id": "360736453765",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Kong API Gateway",
              "Environment": "dev",
              "Name": "kong-dev-postgresql",
              "Service": "kong"
            },
            "timeouts": null,
            "vpc_id": "vpc-043b6bf17a321d9cc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal-lb-egress-manager",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal-lb-egress-portal",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal-lb-egress-portal-gui",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal-lb-ingress-admin",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal-lb-ingress-manager",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal-lb-ingress-portal",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal-lb-ingress-portal-gui",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "manager-ingress-internal-lb",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "portal-gui-ingress-internal-lb",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "portal-ingress-internal-lb",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    }
  ]
}